# qd_library

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  hqdlock.hpp  mrqdlock.hpp  qd.hpp  qd_condition_variable.hpp  qdlock.hpp  qdlock_base.hpp  test.cpp  threadid.hpp
.github/scripts/: get_gtest.sh  make_qd.sh
.github/workflows/: ci.yml  codespell.yml  cpplint.yml
examples/counter/: Makefile  README  README.md  counter_atomic.cpp  counter_futex.cpp  counter_mcsfutex.cpp  counter_pthreads.cpp  counter_qd.cpp  counter_std.cpp  cs.cpp  cs.hpp  cs_atomic.cpp
locks/: CMakeLists.txt  futex_lock.hpp  mcs_futex_lock.cpp  mcs_futex_lock.hpp  mcs_lock.cpp  mcs_lock.hpp  mutex_lock.hpp  pthreads_lock.hpp  tatas_lock.hpp  ticket_futex_lock.hpp  waitable_lock.hpp
queues/: buffer_queue.hpp  dual_buffer_queue.hpp  entry_queue.hpp  queues.hpp  simple_locked_queue.hpp
readindicator/: reader_groups.hpp
tests/: CMakeLists.txt  gentests.py  lock.hpp
util/: pause.hpp  type_tools.hpp
